Store Data and Display Task Report

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ST10442407
 excludes=
+file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\RC_Student_lab\\Documents\\sql connector\\mysql-connector-j-8.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -50,7 +51,10 @@ javac.target=21
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_5.classpath}
+    ${file.reference.mysql-connector-j-8.3.0.jar}:\
+    ${libs.junit_5.classpath}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
